CREATE DATABASE IF NOT EXISTS litepolis;

USE litepolis;

CREATE TABLE IF NOT EXISTS userdata (
    ID BIGINT NOT NULL AUTO_INCREMENT,
    EMAIL STRING NOT NULL,
    PASSWORD STRING NOT NULL,
    PRIVILEGE STRING DEFAULT "user"
)
PRIMARY KEY (ID)
DISTRIBUTED BY HASH(ID);

CREATE TABLE IF NOT EXISTS conversationdata (
    ID BIGINT NOT NULL AUTO_INCREMENT,
    NAME STRING NOT NULL,
    DESCRIPTION STRING,
    CREATOR_ID BIGINT
)
PRIMARY KEY (ID)
DISTRIBUTED BY HASH(ID);
-- FOREIGN KEY (CREATOR_ID) REFERENCES userdata(ID);

CREATE TABLE IF NOT EXISTS commentdata (
    ID BIGINT NOT NULL AUTO_INCREMENT,
    CREATE_DATE DATETIME,
    COMMENT STRING NOT NULL,
    USER_ID BIGINT NOT NULL,
    CONVERSATION_ID BIGINT NOT NULL,
    MODERATED BOOLEAN DEFAULT 'FALSE',
    APPROVED BOOLEAN DEFAULT 'FALSE'
)
PRIMARY KEY (ID)
DISTRIBUTED BY HASH(ID);
-- FOREIGN KEY (USER_ID) REFERENCES userdata(ID);
-- FOREIGN KEY (CONVERSATION_ID) REFERENCES conversationdata(ID);

CREATE TABLE IF NOT EXISTS apikeys (
    API_KEY STRING NOT NULL,
    USER_ID BIGINT NOT NULL
)
PRIMARY KEY (API_KEY)
DISTRIBUTED BY HASH(API_KEY);
-- FOREIGN KEY (USER_ID) REFERENCES userdata(ID);
