Table "userdata" {
  "ID" BIGINT [pk, not null, increment]
  "EMAIL" TEXT [not null]
  "PASSWORD" TEXT [not null]
  "PRIVILEGE" TEXT [default: "user"]
}

Table "conversationdata" {
  "ID" BIGINT [pk, not null, increment]
  "NAME" TEXT [not null]
  "DESCRIPTION" TEXT
  "CREATOR_ID" BIGINT
}

Table "commentdata" {
  "ID" BIGINT [pk, not null, increment]
  "CREATE_DATE" DATETIME
  "COMMENT" TEXT [not null]
  "USER_ID" BIGINT [not null]
  "CONVERSATION_ID" BIGINT [not null]
  "MODERATED" BOOLEAN [default: "FALSE"]
  "APPROVED" BOOLEAN [default: "FALSE"]
}

Table "apikeys" {
  "API_KEY" TEXT [pk, not null]
  "USER_ID" BIGINT [not null]
}

Ref: apikeys.USER_ID > userdata.ID

Ref: userdata.ID < conversationdata.CREATOR_ID

Ref: userdata.ID < commentdata.USER_ID
Ref: conversationdata.ID < commentdata.CONVERSATION_ID
